<resources>
    <string name="app_name">Luyện Thi Bằng Lái Xe B1</string>
    <string name="thi_theo_b">Thi theo bộ đề</string>
    <string name="meothi">Mẹo thi</string>
    <string name="bien_bao">Bien bao</string>
    <string name="Ly_Thuyet">Lý thuyết</string>
    <string name="diem_liet">60 câu điểm liệt</string>
    <string name="on_tap_cau_hoi">Ôn tập câu hỏi</string>
    <string name="De1">Đề 1</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="button2">Button2</string>
    <string name="button1">Button1</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="lt">Luyện thi</string>
    <string name="Thi_theo_bộ_đề">Thi_theo_bộ_đề</string>
    <string name="Đ1">Đề 1</string>
    <string name="Đ2">Đề 2</string>
    <string name="Đ3">Đề 3</string>
    <string name="Đ4">Đề 4</string>
    <string name="Đ5">Đề 5</string>
    <string name="Đ6">Đề 6</string>
    <string name="Đề_4">ĐỀ_4</string>
    <string name="Điemcao100">Điểm cao : 100</string>
    <string name="Bắt_đầu">Bắt đầu</string>
    <string name="Điemcao25">Điểm cao : 25</string>
</resources>